# rag_agent

./: .env  .env.example  .gitignore  pyproject.toml  test.py
chat_history/: user_001
easy_langent/: filemanage_tool.py  langgraph_demo.py  lg_小说创作 .py  llm诗词.txt  novel_final_output.txt  谁是卧底.py
langgraph_study/langgraph_demo/: langgraph.json  pyproject.toml
langgraph_study/langgraph_demo/src/agent/: mcp_agent.py  my_agent.py  my_agent2.py  my_state.py
langgraph_study/langgraph_demo/tests/: mytest.py
langgraph_study/langgraph_demo2/: langgraph.json  pyproject.toml
langgraph_study/langgraph_demo2/src/agent/: env_utils.py  graph.py  graph2.py  graph3.py  graph4.py  graph5.py  my_llm.py
lc_lf_course/: helloworld.ipynb  sichu_agent.py  私厨agent.ipynb
my_proj/model/: factory.py
my_proj/utils/: path_tool.py
rag/: pypdf_test.py
study/P2_提示词优化/: 01提示词优化案例_金融文本分类.py  02Json的基础使用.py  03提示词优化案例_金融信息抽取.py  04提示词优化案例_金融文本匹配判断 copy.py  04提示词优化案例_金融文本匹配判断.py
study/P3_LangChainRAG开发/: 01[扩展]余弦相似度.py  02LangChain访问阿里云通义千问大模型.py  03LangChain访问Ollama本地模型.py  04LangChain的流式输出.py  05LangChain调用聊天模型.py  06LangChain调用Ollama的聊天模型.py  07LangChain消息的简写形式.py  08LangChain访问阿里云嵌入模型.py  10通用提示词模板.py  11FewShot提示词模板.py  12模板类的format和invoke方法.py  13ChatPromptTemplate的使用.py  14Chain的基础使用.py  15[扩展]Python的或运算符的重写.py  17StrOutputParser解析器.py  18JsonOutputParser解析器.py  19RunnableLambda的基础使用.py  20临时会话记忆.py  21长期会话记忆.py  22CSVLoader的使用.py  23JSONLoader的使用.py  25TextLoader和文档分割器.py  26内存向量存储.py  27外部向量持久化存储.py  28向量检索构建提示词.py  29RunnablePassthrough的使用.py
study/P4_RAG项目案例/: app_file_uploader.py  knowledge_base.py  md5.text  rag.py
study/P4_RAG项目案例/chroma_db/: chroma.sqlite3
study/P5_Agent智能体/: 01Agent智能体初体验.py  02Agent的stream流式输出.py  03ReAct案例.py  04middleware中间件.py
(+11 files in other folders)
